[gd_scene load_steps=5 format=2]

[ext_resource path="res://GameScene/characters_scenes/hisoka_head.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameScene/characters_scenes/NormalEnemy.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.8727
height = 11.7891

[node name="NormalEnemy" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 2147483652

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="InitialSpawnTimer" type="Timer" parent="."]

[node name="LiveTimeTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="InitialSpawnTimer" to="." method="_on_InitialSpawnTimer_timeout"]
[connection signal="timeout" from="LiveTimeTimer" to="." method="_on_LiveTimeTimer_timeout"]

[editable path="Hurtbox"]
